{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 9,
  "lineage": "822defa0-4dfb-7c30-51ec-c8d2f6d7315a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instancia_trf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04a81a99f5ec58529",
            "arn": "arn:aws:ec2:us-east-1:388009615923:instance/i-0be2cb01288651bdd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0be2cb01288651bdd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_Windows_Personal",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-049224496e0abe96c",
            "private_dns": "ip-10-0-1-183.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.183",
            "public_dns": "ec2-3-239-205-233.compute-1.amazonaws.com",
            "public_ip": "3.239.205.233",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-079aae7cdb826f5e9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0633b1e218a5b892e",
            "tags": {
              "Name": "instancia glpi"
            },
            "tags_all": {
              "Name": "instancia glpi"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f20266790ec4ce70"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_app",
            "aws_subnet.subnet_app_glpi",
            "aws_vpc.vpc_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:388009615923:internet-gateway/igw-08c32dfbd2288bff0",
            "id": "igw-08c32dfbd2288bff0",
            "owner_id": "388009615923",
            "tags": {
              "Name": "Gw_app"
            },
            "tags_all": {
              "Name": "Gw_app"
            },
            "vpc_id": "vpc-0e81c5340f2941968"
          },
          "dependencies": [
            "aws_vpc.vpc_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_default_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:388009615923:route-table/rtb-0da31d3d47c54085b",
            "id": "rtb-0da31d3d47c54085b",
            "owner_id": "388009615923",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08c32dfbd2288bff0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_default_app"
            },
            "tags_all": {
              "Name": "rt_default_app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e81c5340f2941968"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw_app",
            "aws_vpc.vpc_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a_rt_default_app_subnet_app_glpi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c22de820509fc486",
            "route_table_id": "rtb-0da31d3d47c54085b",
            "subnet_id": "subnet-0633b1e218a5b892e"
          },
          "dependencies": [
            "aws_internet_gateway.gw_app",
            "aws_route_table.rt_default_app",
            "aws_subnet.subnet_app_glpi",
            "aws_vpc.vpc_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:388009615923:security-group/sg-0f20266790ec4ce70",
            "description": "allow access app, desde cualquier lugar",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow access any port",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f20266790ec4ce70",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow access port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow access port 2357",
                "from_port": 2357,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2357
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow access port 3306",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "SG access glpi",
            "name_prefix": "",
            "owner_id": "388009615923",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG_app_acceso"
            },
            "tags_all": {
              "Name": "SG_app_acceso"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e81c5340f2941968"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_app_glpi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:388009615923:subnet/subnet-0633b1e218a5b892e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0633b1e218a5b892e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "388009615923",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet_public_glpi"
            },
            "tags_all": {
              "Name": "Subnet_public_glpi"
            },
            "vpc_id": "vpc-0e81c5340f2941968"
          },
          "dependencies": [
            "aws_vpc.vpc_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:388009615923:vpc/vpc-0e81c5340f2941968",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03c11268f6f50b445",
            "default_route_table_id": "rtb-0af167db094ca7a13",
            "default_security_group_id": "sg-00cc7dfe3c121e9b8",
            "dhcp_options_id": "dopt-064c344ddc2260e59",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e81c5340f2941968",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0af167db094ca7a13",
            "owner_id": "388009615923",
            "tags": {
              "Name": "VPC_GLPI"
            },
            "tags_all": {
              "Name": "VPC_GLPI"
            }
          }
        }
      ]
    }
  ]
}